--- a/styles/style.css
+++ b/styles/style.css
@@ -13,14 +13,54 @@
     height: 100vh;
     min-height: 600px;
     max-height: 756px;
+    display: flex;
+    align-items: center;
     /* Parámetros para la sección del encabezado */
+}
+.logo_place_header{
+    width: 154px;
+    height: 31px;
+    position: absolute;
+    top: 30px;
+    left: 64px;
+    z-index: 0;
+}
+.header__title{
+    max-width: 730px;
+    margin-left: 64px;
+    z-index: 0;
+    line-height: 96px;
+    font-size: 102px;
+    font-weight: bold;
+}
+.header__subtitle{
+    max-width: 388px;
+    position: absolute;
+    z-index: 0;
+    left: 64px;
+    bottom: 30px;
+    line-height: 25px;
+    font-size: 18px;
+    font-weight: normal;
+}
+.header__main-ilustration{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    width: 756px;
+    height: 608px;
+    z-index: 1;
 }
 
 /* Aquí tenemos dos ejemplos de selectores para 
 recordarte cómo configurar los estilos de los elementos*/
-.header__square-pic {
+.header__triangle {
+    position: absolute;
     height: 568px;
     width: 568px;
+    right: 0;
+    top: 64px;
+    z-index: 0;
 }
 
 /* incluidos aquellos con modificadores clave-valor */
